--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "homepage": "https://github.com/jmaister/rogue#readme",
   "devDependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6"
+    "html-webpack-plugin": "3.2.0",
+    "webpack": "4.38.0",
+    "webpack-cli": "3.3.6"
   },
   "dependencies": {
-    "rot-js": "^2.1.1",
-    "sprintf-js": "^1.1.2"
+    "rot-js": "2.1.1",
+    "sprintf-js": "1.1.2"
   }
 }
