--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/jmaister/rogue#readme",
   "devDependencies": {
+    "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
+    "style-loader": "1.0.0",
     "webpack": "4.38.0",
     "webpack-cli": "3.3.6"
   },
   "dependencies": {
+    "canvas-gamepad": "1.0.1",
     "rot-js": "2.1.1",
     "sprintf-js": "1.1.2"
   }
